--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <html>
-  <head><title>My Site</title></head>
-  <body><h1>Hello, welcome to iheartchange!</h1></body>
+  <head>
+    <title>iHeartChange Clothing</title>
+  </head>
+  <body>
+    <h1>iHeartChange Clothing</h1>
+    <p>Streetwear for everyone.</p>
+    <img src="logo.png" alt="Brand Logo">
+    <h2>Featured Products</h2>
+    <ul>
+      <li>Hoodie</li>
+      <li>T-Shirt</li>
+      <li>Hat</li>
+    </ul>
+  </body>
 </html>
