--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
+<!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <meta charset="UTF-8">
     <title>iHeartChange Clothing</title>
-  </head>
-  <body>
-    <h1>iHeartChange Clothing</h1>
-    <p>Streetwear for everyone.</p>
-    <img src="logo.png" alt="Brand Logo">
-    <h2>Featured Products</h2>
-    <ul>
-      <li>Hoodie</li>
-      <li>T-Shirt</li>
-      <li>Hat</li>
-    </ul>
-  </body>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>iHeartChange Clothing</h1>
+        <p>Streetwear for everyone.</p>
+    </header>
+
+    <section id="products">
+        <h2>Featured Products</h2>
+        <div class="product">
+            <img src="hoodie.jpg" alt="Hoodie">
+            <p>Hoodie</p>
+        </div>
+        <div class="product">
+            <img src="tshirt.jpg" alt="T-Shirt">
+            <p>T-Shirt</p>
+        </div>
+        <div class="product">
+            <img src="hat.jpg" alt="Hat">
+            <p>Hat</p>
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2025 iHeartChange Clothing</p>
+    </footer>
+</body>
 </html>
